// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Kusama Registrar > pallet registrar - lifecycle functions > cannot swap two parathreads 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x0d000000",
          "index": 70,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 10000)",
          "refTime": "(rounded 2000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Registrar > pallet registrar - registration functions > alice duplicate para register failed event 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x01000000",
          "index": 70,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 10000)",
          "refTime": "(rounded 8000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Registrar > pallet registrar - registration functions > bob para deregister failed event 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 10000)",
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Registrar > pallet registrar - registration functions > bob para register failed event 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x02000000",
          "index": 70,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 10000)",
          "refTime": "(rounded 8000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Registrar > pallet registrar - registration functions > registrar register events 1`] = `
[
  {
    "data": {
      "manager": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
    },
    "method": "Registered",
    "section": "registrar",
  },
]
`;

exports[`Kusama Registrar > pallet registrar - registration functions > registrar reserve events 1`] = `
[
  {
    "data": {
      "who": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
    },
    "method": "Reserved",
    "section": "registrar",
  },
]
`;
